<resources>
    <string name="app_name">投行帮</string>
    <string name="title_activity_base">BaseActivity</string>


    <string name="footerConsulatationString">资讯</string>
    <string name="footerBussinessOpportunitiedString">业务机会</string>
    <string name="footerSearchString">搜索</string>
    <string name="footerCommunicationString">学习交流</string>
    <string name="footerMineString">我的</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="BussinessOpportunitiedSubtitleString">并购投资项目</string>
    <string name="productReleaseString">资管产品发布</string>
    <string name="studyString">学习</string>
    <string name="discussString">交流</string>
    <string name="loginOrRegistString">登录/注册</string>
    <string name="favoriteString">收藏</string>
    <string name="historyString">历史</string>
    <string name="commentString">评论</string>
    <string name="messageNotificationString">消息通知</string>
    <string name="mycourseString">我的课程</string>
    <string name="myorderString">我的订单</string>
    <string name="myAttentionString">我的关注</string>
    <string name="myPostString">我的帖子</string>
    <string name="updateString">软件更新</string>
    <string name="settingsString">设置</string>
    <string name="feedbackString">意见反馈</string>
    <string name="inputHintString">写跟帖</string>
    <string name="inputString">跟帖</string>
    <string name="inputHint1String">写评论</string>
    <string name="inputCommitString">发表 ✔</string>
    <string name="studyVideoString">学习视频</string>

    <string name="amountString">金额：</string>
    <string name="termString">期限：</string>
    <string name="stateOwnedString">国企：</string>
    <string name="guaranteeString">担保：</string>
    <string name="rateString">评级：</string>
    <string name="publishDateString">发布时间：</string>
    <string name="updateDateString">更新时间：</string>
    <string name="search_hintString">请输入您要查询的公司名称</string>
    <string name="feedback_hintString">请输入你的意见</string>
    <string name="userTelString">手机号码</string>
    <string name="userCodeString">验证码&#8195;</string>
    <string name="getCodeString">获取验证码</string>
    <string name="userTelHintString">输入您的手机号码</string>
    <string name="userCodeHintString">输入验证码</string>
    <string name="loginString">确认登录</string>
    <string name="downLoadString">下载</string>
    <string name="loginByOtherWayString">您还可以使用以下方式登录</string>
    <string name="loginByQQString">QQ登录</string>
    <string name="loginByWechatString">微信登录</string>
    <string name="telIsEmptyString">请先填写手机号</string>
    <string name="telIsNotCorrectString">手机号不正确</string>
    <string name="loginNoCompeleteString">登录信息填写不完整</string>
    <string name="commentEmptyString">请先输入评价内容</string>
    <string name="commentNeedloginString">当前未登录，请先登录。</string>
    <string name="videoCostString">此视频为收费视频暂时无法观看，请在购买后继续观看哦！</string>
    <string name="NotitleString">请先添加帖子标题</string>
    <string name="contentEmptyString">帖子内容为空</string>


    <string name="pull_down_refresh_label">下拉可以刷新</string>
    <string name="pull_down_release_label">松开立即刷新</string>
    <string name="pull_down_refreshing_label">正在刷新数据</string>
    <string name="pull_up_load_label">上拉加载</string>
    <string name="pull_up_loading_label">正在加载数据</string>
</resources>
