<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingTop="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/isTop_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:src="@mipmap/top_icon"
            android:visibility="gone" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:text="湖南国有控股企业（国家级高新区基建主体）232323"
            android:textColor="@color/colorMain"
            android:textSize="@dimen/tv_15sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:src="@mipmap/arrow_right" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amountString"
            android:textColor="@color/colorMain"
            android:textSize="@dimen/tv_12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:maxLines="1"
            android:text="25亿"
            android:textColor="@color/colorPink"
            android:textSize="@dimen/tv_12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amountString"
            android:textColor="@color/colorMain"
            android:textSize="@dimen/tv_12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:maxLines="1"
            android:text="7.5%"
            android:textColor="@color/colorPink"
            android:textSize="@dimen/tv_12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/termString"
            android:textColor="@color/colorMain"
            android:textSize="@dimen/tv_12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:maxLines="1"
            android:text="7.5%"
            android:textColor="@color/colorPink"
            android:textSize="@dimen/tv_12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stateOwnedString"
            android:textColor="@color/colorMain"
            android:textSize="@dimen/tv_12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:maxLines="1"
            android:text="否"
            android:textColor="@color/colorPink"
            android:textSize="@dimen/tv_12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guaranteeString"
            android:textColor="@color/colorMain"
            android:textSize="@dimen/tv_12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:maxLines="1"
            android:text="无"
            android:textColor="@color/colorPink"
            android:textSize="@dimen/tv_12sp" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rateString"
            android:textColor="@color/colorMain"
            android:textSize="@dimen/tv_12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:maxLines="1"
            android:text="主体AA/债项AA"
            android:textColor="@color/colorPink"
            android:textSize="@dimen/tv_12sp" />
    </LinearLayout>
</LinearLayout>