<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context="com.xinyi.touhang.fragments.MineFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="@dimen/content_pading_7dp"
        android:paddingRight="@dimen/content_pading_7dp"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/subTitleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/footerMineString"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/tv_16sp"
            android:textStyle="bold"
            android:visibility="visible" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="20dp"
                android:paddingTop="10dp">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/login_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/qq_icon" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:src="@mipmap/wechat_icon" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/login_tv"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/login_bg"
                        android:gravity="center"
                        android:text="@string/loginOrRegistString"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/tv_15sp"
                        app:layout_constraintLeft_toLeftOf="@id/login_layout"
                        app:layout_constraintRight_toRightOf="@id/login_layout"
                        app:layout_constraintTop_toBottomOf="@id/login_layout" />

                </android.support.constraint.ConstraintLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:scaleType="fitXY"
                        android:src="@mipmap/favo_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/favoriteString"
                        android:textColor="@color/colorSubTitle"
                        android:textSize="@dimen/tv_14sp" />

                </LinearLayout>

                <View
                    android:layout_width="0.5dp"
                    android:layout_height="55dp"
                    android:background="@color/colorLine" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:scaleType="fitXY"
                        android:src="@mipmap/history_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/historyString"
                        android:textColor="@color/colorSubTitle"
                        android:textSize="@dimen/tv_14sp" />

                </LinearLayout>

                <View
                    android:layout_width="0.5dp"
                    android:layout_height="55dp"
                    android:background="@color/colorLine" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:scaleType="fitXY"
                        android:src="@mipmap/comment_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/commentString"
                        android:textColor="@color/colorSubTitle"
                        android:textSize="@dimen/tv_14sp" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/colorLine"
                android:paddingLeft="@dimen/content_pading_7dp"
                android:paddingRight="@dimen/content_pading_7dp" />

            <LinearLayout
                android:orientation="vertical"
                android:paddingRight="@dimen/content_pading_7dp"
                android:paddingLeft="@dimen/content_pading_7dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp">


                    <TextView
                        android:textSize="@dimen/tv_14sp"
                        android:textColor="@color/colorMain"
                        android:layout_centerVertical="true"
                        android:text="@string/messageNotificationString"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <ImageView
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:src="@mipmap/arrow_right"
                        android:layout_width="20dp"
                        android:layout_height="20dp" />

                    <View
                        android:layout_alignParentBottom="true"
                        android:layout_width="wrap_content"
                        android:layout_height="0.5dp"
                        android:background="@color/colorItem"/>
                </RelativeLayout>

                <RelativeLayout
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="45dp">


                    <TextView
                        android:textSize="@dimen/tv_14sp"
                        android:textColor="@color/colorMain"
                        android:layout_centerVertical="true"
                        android:text="@string/mycourseString"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <ImageView
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:src="@mipmap/arrow_right"
                        android:layout_width="20dp"
                        android:layout_height="20dp" />

                    <View
                        android:layout_alignParentBottom="true"
                        android:layout_width="wrap_content"
                        android:layout_height="0.5dp"
                        android:background="@color/colorItem"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp">


                    <TextView
                        android:textSize="@dimen/tv_14sp"
                        android:textColor="@color/colorMain"
                        android:layout_centerVertical="true"
                        android:text="@string/myorderString"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <ImageView
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:src="@mipmap/arrow_right"
                        android:layout_width="20dp"
                        android:layout_height="20dp" />

                    <View
                        android:layout_alignParentBottom="true"
                        android:layout_width="wrap_content"
                        android:layout_height="0.5dp"
                        android:background="@color/colorItem"/>
                </RelativeLayout>
                <RelativeLayout
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="45dp">


                    <TextView
                        android:textSize="@dimen/tv_14sp"
                        android:textColor="@color/colorMain"
                        android:layout_centerVertical="true"
                        android:text="@string/myAttentionString"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <ImageView
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:src="@mipmap/arrow_right"
                        android:layout_width="20dp"
                        android:layout_height="20dp" />

                    <View
                        android:layout_alignParentBottom="true"
                        android:layout_width="wrap_content"
                        android:layout_height="0.5dp"
                        android:background="@color/colorItem"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp">


                    <TextView
                        android:textSize="@dimen/tv_14sp"
                        android:textColor="@color/colorMain"
                        android:layout_centerVertical="true"
                        android:text="@string/myPostString"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <ImageView
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:src="@mipmap/arrow_right"
                        android:layout_width="20dp"
                        android:layout_height="20dp" />

                    <View
                        android:layout_alignParentBottom="true"
                        android:layout_width="wrap_content"
                        android:layout_height="0.5dp"
                        android:background="@color/colorItem"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp">


                    <TextView
                        android:textSize="@dimen/tv_14sp"
                        android:textColor="@color/colorMain"
                        android:layout_centerVertical="true"
                        android:text="@string/updateString"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <ImageView
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:src="@mipmap/arrow_right"
                        android:layout_width="20dp"
                        android:layout_height="20dp" />

                    <View
                        android:layout_alignParentBottom="true"
                        android:layout_width="wrap_content"
                        android:layout_height="0.5dp"
                        android:background="@color/colorItem"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp">


                    <TextView
                        android:textSize="@dimen/tv_14sp"
                        android:textColor="@color/colorMain"
                        android:layout_centerVertical="true"
                        android:text="@string/feedbackString"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <ImageView
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:src="@mipmap/arrow_right"
                        android:layout_width="20dp"
                        android:layout_height="20dp" />

                    <View
                        android:layout_alignParentBottom="true"
                        android:layout_width="wrap_content"
                        android:layout_height="0.5dp"
                        android:background="@color/colorItem"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp">


                    <TextView
                        android:textSize="@dimen/tv_14sp"
                        android:textColor="@color/colorMain"
                        android:layout_centerVertical="true"
                        android:text="@string/settingsString"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <ImageView
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:src="@mipmap/arrow_right"
                        android:layout_width="20dp"
                        android:layout_height="20dp" />

                    <View
                        android:layout_alignParentBottom="true"
                        android:layout_width="wrap_content"
                        android:layout_height="0.5dp"
                        android:background="@color/colorItem"/>
                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>
